[GLT-4794] updated to Spring 7, Hibernate 7, Jackson 3, and Junit 6 (#3263)