@@ -1,16 +1,15 @@
 package uk.ac.bbsrc.tgac.miso.webapp.integrationtest;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static uk.ac.bbsrc.tgac.miso.core.util.LimsUtils.isStringEmptyOrNull;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
@@ -45,12 +44,12 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
     Set<String> expectedHeadings = Sets.newHashSet();
     expectedHeadings.addAll(qcColumns);
 
-    BulkQCPage page = getEditPage(Arrays.asList(2201L));
+    BulkQCPage page = getEditPage(List.of(2201L));
     HandsOnTable table = page.getTable();
     List<String> headings = table.getColumnHeadings();
     assertEquals(expectedHeadings.size(), headings.size());
     for (String col : expectedHeadings) {
-      assertTrue("Check for column: '" + col + "'", headings.contains(col));
+      assertTrue(headings.contains(col), "Check for column: '" + col + "'");
     }
     assertEquals(1, table.getRowCount());
   }
@@ -61,12 +60,12 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
     Set<String> expectedHeadings = Sets.newHashSet();
     expectedHeadings.addAll(qcColumns);
 
-    BulkQCPage page = getAddPage(Arrays.asList(2201L), 1);
+    BulkQCPage page = getAddPage(List.of(2201L), 1);
     HandsOnTable table = page.getTable();
     List<String> headings = table.getColumnHeadings();
     assertEquals(expectedHeadings.size(), headings.size());
     for (String col : expectedHeadings) {
-      assertTrue("Check for column: '" + col + "'", headings.contains(col));
+      assertTrue(headings.contains(col), "Check for column: '" + col + "'");
     }
     assertEquals(1, table.getRowCount());
   }
@@ -74,7 +73,7 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
   @Test
   public void testAddQc() throws Exception {
     // Goal: ensure a sample QC can be added
-    BulkQCPage page = getAddPage(Arrays.asList(2201L), 1);
+    BulkQCPage page = getAddPage(List.of(2201L), 1);
     HandsOnTable table = page.getTable();
 
     Map<String, String> attrs = Maps.newLinkedHashMap();
@@ -97,7 +96,7 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
   @Test
   public void testEditQc() throws Exception {
     // Goal: ensure a sample QC can be edited
-    BulkQCPage page = getEditPage(Arrays.asList(4447L));
+    BulkQCPage page = getEditPage(List.of(4447L));
     HandsOnTable table = page.getTable();
 
     Map<String, String> attrs = Maps.newLinkedHashMap();
@@ -120,7 +119,7 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
   @Test
   public void testAutoUpdateVolume() throws Exception {
     // Goal: ensure that volume and volume units are updated by the QC
-    BulkQCPage page = getAddPage(Arrays.asList(2201L), 1);
+    BulkQCPage page = getAddPage(List.of(2201L), 1);
     HandsOnTable table = page.getTable();
 
     Map<String, String> attrs = Maps.newLinkedHashMap();
@@ -139,19 +138,17 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
     SampleQC saved = getLatestQc();
     assertQCAttributes(attrs, saved);
 
-    assertEquals(
-        String.format("Expected volume to be updated to %s, instead got %f", "10.43", saved.getSample().getVolume()), 0,
-        saved.getSample().getVolume().compareTo(new BigDecimal("10.43")));
-    assertEquals(
+    assertEquals(0, saved.getSample().getVolume().compareTo(new BigDecimal("10.43")),
+        String.format("Expected volume to be updated to %s, instead got %f", "10.43", saved.getSample().getVolume()));
+    assertEquals(VolumeUnit.MICROLITRES, saved.getSample().getVolumeUnits(),
         String.format("Expected volume units to be updated to %s, instead got %s", VolumeUnit.MICROLITRES.getUnits(),
-            saved.getSample().getVolumeUnits().getUnits()),
-        VolumeUnit.MICROLITRES, saved.getSample().getVolumeUnits());
+            saved.getSample().getVolumeUnits().getUnits()));
   }
 
   @Test
   public void testAutoUpdateConcentration() throws Exception {
     // Goal: ensure that volume and volume units are updated by the QC
-    BulkQCPage page = getAddPage(Arrays.asList(2201L), 1);
+    BulkQCPage page = getAddPage(List.of(2201L), 1);
     HandsOnTable table = page.getTable();
 
     Map<String, String> attrs = Maps.newLinkedHashMap();
@@ -170,15 +167,12 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
     SampleQC saved = getLatestQc();
     assertQCAttributes(attrs, saved);
 
-    assertEquals(
+    assertEquals(0, saved.getSample().getConcentration().compareTo(new BigDecimal("24.78")),
         String.format("Expected concentration to be updated to %s, instead got %f", "24.78",
-            saved.getSample().getConcentration()),
-        0, saved.getSample().getConcentration().compareTo(new BigDecimal("24.78")));
-    assertEquals(
+            saved.getSample().getConcentration()));
+    assertEquals(ConcentrationUnit.NANOMOLAR, saved.getSample().getConcentrationUnits(),
         String.format("Expected concentration units to be updated to %s, instead got %s",
-            ConcentrationUnit.NANOMOLAR.getUnits(),
-            saved.getSample().getConcentrationUnits().getUnits()),
-        ConcentrationUnit.NANOMOLAR, saved.getSample().getConcentrationUnits());
+            ConcentrationUnit.NANOMOLAR.getUnits(), saved.getSample().getConcentrationUnits().getUnits()));
   }
 
   private void fillRow(HandsOnTable table, int rowNum, Map<String, String> attributes) {
@@ -189,10 +183,10 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
     String formatString = hintMessage + " row %d column '%s' value";
     attributes.forEach((key, val) -> {
       if (isStringEmptyOrNull(val)) {
-        assertTrue(String.format(formatString, rowNum, key) + " expected empty",
-            isStringEmptyOrNull(table.getText(key, rowNum)));
+        assertTrue(isStringEmptyOrNull(table.getText(key, rowNum)),
+            String.format(formatString, rowNum, key) + " expected empty");
       } else {
-        assertEquals(String.format(formatString, rowNum, key), val, table.getText(key, rowNum));
+        assertEquals(val, table.getText(key, rowNum), String.format(formatString, rowNum, key));
       }
     });
   }
@@ -210,10 +204,10 @@ public class BulkSampleQCIT extends AbstractBulkSampleIT {
       String objectAttribute = getter.apply(object);
       String tableAttribute = cleanNullValues(column, attributes.get(column));
       if (tableAttribute == null) {
-        assertTrue(String.format("persisted attribute expected empty '%s'", column),
-            isStringEmptyOrNull(objectAttribute));
+        assertTrue(isStringEmptyOrNull(objectAttribute),
+            String.format("persisted attribute expected empty '%s'", column));
       } else {
-        assertEquals(String.format("persisted attribute '%s'", column), tableAttribute, objectAttribute);
+        assertEquals(tableAttribute, objectAttribute, String.format("persisted attribute '%s'", column));
       }
     }
   }
