@@ -1,28 +1,16 @@
 package uk.ac.bbsrc.tgac.miso.webapp.springtest;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.web.servlet.*;
 
-import static org.springframework.test.web.servlet.setup.MockMvcBuilders.*;
-
 import javax.ws.rs.core.MediaType;
-
-import org.checkerframework.checker.units.qual.Temperature;
-import org.junit.Before;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.*;
-import org.springframework.test.web.servlet.ResultActions;
-import com.jayway.jsonpath.JsonPath;
 
 import static org.hamcrest.Matchers.*;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.ObjectWriter;
-
-import org.springframework.test.web.servlet.MvcResult;
 import uk.ac.bbsrc.tgac.miso.dto.Dtos;
 import uk.ac.bbsrc.tgac.miso.core.data.ArrayRun;
 import uk.ac.bbsrc.tgac.miso.core.data.Array;
@@ -30,28 +18,13 @@ import uk.ac.bbsrc.tgac.miso.core.data.ArrayRunSample;
 import uk.ac.bbsrc.tgac.miso.core.data.ArrayRunSample.ArrayRunSampleId;
 import uk.ac.bbsrc.tgac.miso.dto.ArrayRunDto;
 import uk.ac.bbsrc.tgac.miso.dto.ArrayRunSampleDto;
-import uk.ac.bbsrc.tgac.miso.core.data.Instrument;
-import uk.ac.bbsrc.tgac.miso.core.data.impl.InstrumentImpl;
 import uk.ac.bbsrc.tgac.miso.core.data.impl.SampleImpl;
 
-import org.springframework.scheduling.annotation.EnableAsync;
-import org.springframework.web.servlet.View;
-import com.fasterxml.jackson.databind.SerializationFeature;
 import org.springframework.security.test.context.support.WithMockUser;
-import uk.ac.bbsrc.tgac.miso.core.data.type.StatusType;
-import static org.junit.Assert.*;
-import java.util.Collections;
-import uk.ac.bbsrc.tgac.miso.core.data.type.HealthType;
+import static org.junit.jupiter.api.Assertions.*;
 
-
-import java.util.List;
 import java.util.Arrays;
-import java.util.ArrayList;
-
-import org.springframework.test.web.servlet.MockMvc;
-import java.util.Date;
-import java.time.LocalDate;
-
+import java.util.List;
 
 public class ArrayRunRestControllerST extends AbstractST {
 
@@ -94,7 +67,7 @@ public class ArrayRunRestControllerST extends AbstractST {
 
   @Test
   public void testUpdate() throws Exception {
-    ArrayRunDto arr = Dtos.asDto(currentSession().get(controllerClass, 1));
+    ArrayRunDto arr = Dtos.asDto(currentSession().find(controllerClass, 1));
 
     arr.setAlias("modified");
     ArrayRun updatedArr = baseTestUpdate(CONTROLLER_BASE, arr, 1, controllerClass);
@@ -104,7 +77,7 @@ public class ArrayRunRestControllerST extends AbstractST {
 
   @Test
   public void testFindArrays() throws Exception {
-    baseSearchByTerm(CONTROLLER_BASE + "/array-search", "1234", Arrays.asList(1));
+    baseSearchByTerm(CONTROLLER_BASE + "/array-search", "1234", List.of(1));
 
   }
 
@@ -155,17 +128,17 @@ public class ArrayRunRestControllerST extends AbstractST {
 
     getMockMvc().perform(put(CONTROLLER_BASE + "/1/samples")
         .contentType(MediaType.APPLICATION_JSON)
-        .content(makeJsonForGenericList(Arrays.asList(dto)))
+        .content(makeJsonForGenericList(List.of(dto)))
         .accept(MediaType.APPLICATION_JSON))
         .andExpect(status().isNoContent());
 
     currentSession().clear();
 
-    ArrayRun run = currentSession().get(ArrayRun.class, 1L);
-    Array array = currentSession().get(Array.class, 1L);
-    SampleImpl sample = currentSession().get(SampleImpl.class, 8L);
+    ArrayRun run = currentSession().find(ArrayRun.class, 1L);
+    Array array = currentSession().find(Array.class, 1L);
+    SampleImpl sample = currentSession().find(SampleImpl.class, 8L);
     ArrayRunSample saved =
-        currentSession().get(ArrayRunSample.class, new ArrayRunSampleId(run, array, "R01C01", sample));
+        currentSession().find(ArrayRunSample.class, new ArrayRunSampleId(run, array, "R01C01", sample));
 
     assertNotNull(saved);
     assertNotNull(saved.getQcStatus());
@@ -206,20 +179,20 @@ public class ArrayRunRestControllerST extends AbstractST {
 
   @Test
   public void testUpdateRemoveArrayClearsSamples() throws Exception {
-    ArrayRunDto arr = Dtos.asDto(currentSession().get(controllerClass, 2));
+    ArrayRunDto arr = Dtos.asDto(currentSession().find(controllerClass, 2));
     arr.setArrayId(null);
 
-    ArrayRun run = currentSession().get(controllerClass, 2L);
-    Array array = currentSession().get(Array.class, 1L);
-    SampleImpl sample1 = currentSession().get(SampleImpl.class, 8L);
+    ArrayRun run = currentSession().find(controllerClass, 2L);
+    Array array = currentSession().find(Array.class, 1L);
+    SampleImpl sample1 = currentSession().find(SampleImpl.class, 8L);
     ArrayRunSampleId id1 = new ArrayRunSampleId(run, array, "R01C01", sample1);
-    assertNotNull(currentSession().get(ArrayRunSample.class, id1));
+    assertNotNull(currentSession().find(ArrayRunSample.class, id1));
 
     ArrayRun updatedArr = baseTestUpdate(CONTROLLER_BASE, arr, 2, controllerClass);
 
     assertNull(updatedArr.getArray());
     currentSession().clear();
-    assertNull(currentSession().get(ArrayRunSample.class, id1));
+    assertNull(currentSession().find(ArrayRunSample.class, id1));
   }
 
 }
